[package]
name = "structures"
authors = ["Babsacus"]
version = "1.0.2"
edition = "2021"
description = "A library of collection data structures."
license = "MIT"
repository = "https://github.com/Babsacus/Structures"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
len-trait = "0.6.1"
rand = "0.8.5"
str-macro = "1.0.0"